css/styles.css
body {
    font-family: 'Roboto', sans-serif;
    color: #434455;
    background-color: #ffffff;
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0.02em;
}

a {
    text-decoration: none;
}

ul li {
    list-style-type: none;
}

/* header */

.logo {
    font-family: 'Raleway', sans-serif;
    font-weight: 700;
    text-transform: uppercase;
    color: #4D5AE5;
    font-size: 18px;
    line-height: 1.17;
    letter-spacing: 0.03em;
}

.logo-header {
    color: #2E2F42;
}

.logo-footer {
    color: #F4F4FD;
}

.header-link {
    color: #2E2F42;
    font-weight: 500;
    letter-spacing: 0.02em;
    color: #2e2f42;
}

.header-link:hover,
.header-link:focus {
    color: #404bbf;
}

.header-address {
    font-style: normal;
}

.address-link {
    color: #434455;
    letter-spacing: 0.02em;
}

.address-link:hover,
.address-link:focus {
    color: #404bbf;
}

/* hero */

.hero {
    background-color: #2E2F42;
    color: #FFF;
    text-align: center;
}

.hero-title {
    font-size: 56px;
    font-weight: 700;
    line-height: 1.07;
    letter-spacing: 0.02em;
}

.hero-btn {
    background-color:#4D5AE5;
    color: currentColor;
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0.04em;
    font-family: inherit;
    font-weight: 500;
    cursor: pointer;
}

.hero-btn:hover,
.hero-btn:focus {
    background-color: #404BBF;
}

/* values */

.values-name {
    color: #2E2F42;
    font-size: 20px;
    font-weight: 500;
    line-height: 1.2;
}

/* our team */

.team {
    background-color: #F4F4FD;
    text-align: center;
}

.team-title {
    color: #2E2F42;
    font-size: 36px;
    font-weight: 700;
    line-height: 1.11;
    text-transform: capitalize;
}

.team-card {
    background-color: #ffffff;
}

.team-name {
    color: #2E2F42;
    font-size: 20px;
    font-weight: 500;
    line-height: 1.2;
    letter-spacing: 0.06em;
}

/* our portfolio */

.portfolio {
    
}

.portfolio-title {
    color: #2E2F42;
    font-size: 36px;
    font-weight: 700;
    line-height: 1.11;
    text-transform: capitalize;
    text-align: center;
}

.portfolio-card {
    background-color: #ffffff;
}

.portfolio-name {
    color: #2E2F42;
    font-size: 20px;
    font-weight: 500;
    line-height: 1.2;
    letter-spacing: 0.06em;
}

/* footer */

.footer {
    background-color: #2E2F42;
}

.text-footer {
    color: #F4F4FD;
}

